--- a/app/src/main/res/layout/fragment_fourth.xml
+++ b/app/src/main/res/layout/fragment_fourth.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,12 +7,14 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/txt4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Fourth fragment"
-        android:id="@+id/txt4"
-        android:gravity="center"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:textSize="25sp"/>
+        android:gravity="center"
+        android:text="Fourth fragment"
+        android:textSize="25sp" />
 
-</FrameLayout>
+</RelativeLayout>
